--- a/style.css
+++ b/style.css
@@ -188,7 +188,10 @@ form input.darker-input:hover {
     color: red;
 }
 
-
+.completed {
+    color: purple;
+    text-decoration: line-through;
+}
 
 
 
